# devops-f20-final-exam-sgun7

./: CMakeLists.txt  Report.md  jenkinsPipeline.groovy
.circleci/: config.yml
